microservices/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appserver-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      server: appserver
  
  template:
    metadata:
      labels:
        server: appserver
    spec:
      containers:
        - name: users-container
          image: users:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
