microservices/k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: appserver-service-clusterip-service

spec:
  type: ClusterIP
  ports:
    - port: 81
      targetPort: 3000
  selector:
      server: appserver
