microservices/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /test-endpoint
            pathType: Prefix
            backend:
              service:
                name: appserver-service-clusterip-service
                port:
                  number: 81
      # host: hello-world.info
